# Raspberry_Bluetooth

./: CMakeLists.txt  README.md
config/: kill_process.sh
scripts/: sdp.sh
src/: bluetooth_server.c
